(patch): fixing extra space above bullet lists on component layout (#165)
* fixing extra space above bullet lists.

* Removing id=content duplication and link from header in new-docs-layout

---------

--- a/src/layouts/new-docs/style/page.css
+++ b/src/layouts/new-docs/style/page.css
@@ -273,7 +273,7 @@
 
 	& ul {
 		/* Layout */
-		margin-block-start: 9--step;
+		//margin-block-start: 9--step;
 
 		/* Layout */
 		padding-inline-start: 4--step;
